logs/validate.20260408-084512.log
Mode: isolate
Isolate: including Chap37 Chap45 Chap18 Chap19 Chap23 Chap02
error: unexpected token, expected `;`
    --> src/Chap45/BinaryHeapPQ.rs:1236:37
     |
1236 | ...                   implies #[trigger] BinaryHeapPQ::<T>::spec_exec_heap_inv_at(ne_seq, j) by {
     |                               ^

error[E0425]: cannot find type `BinaryHeapPQ` in this scope
    --> src/Chap45/BinaryHeapPQ.rs:1867:75
     |
1867 |     impl<T: StT + Ord + TotalOrder + std::fmt::Debug> std::fmt::Debug for BinaryHeapPQ<T> {
     |                                                                           ^^^^^^^^^^^^ not found in this scope

error[E0405]: cannot find trait `StT` in this scope
    --> src/Chap45/BinaryHeapPQ.rs:1867:13
     |
1867 |     impl<T: StT + Ord + TotalOrder + std::fmt::Debug> std::fmt::Debug for BinaryHeapPQ<T> {
     |             ^^^ not found in this scope
     |
help: consider importing this trait
     |
  28 +     use crate::Types::Types::StT;
     |

error[E0405]: cannot find trait `TotalOrder` in this scope
    --> src/Chap45/BinaryHeapPQ.rs:1867:25
     |
1867 |     impl<T: StT + Ord + TotalOrder + std::fmt::Debug> std::fmt::Debug for BinaryHeapPQ<T> {
     |                         ^^^^^^^^^^ not found in this scope
     |
help: consider importing this trait
     |
  28 +     use crate::vstdplus::total_order::total_order::TotalOrder;
     |

error[E0425]: cannot find type `BinaryHeapPQ` in this scope
    --> src/Chap45/BinaryHeapPQ.rs:1873:49
     |
1873 |     impl<T: StT + Ord + TotalOrder> Display for BinaryHeapPQ<T> {
     |                                                 ^^^^^^^^^^^^ not found in this scope

error[E0405]: cannot find trait `StT` in this scope
    --> src/Chap45/BinaryHeapPQ.rs:1873:13
     |
1873 |     impl<T: StT + Ord + TotalOrder> Display for BinaryHeapPQ<T> {
     |             ^^^ not found in this scope
     |
help: consider importing this trait
     |
  28 +     use crate::Types::Types::StT;
     |

error[E0405]: cannot find trait `TotalOrder` in this scope
    --> src/Chap45/BinaryHeapPQ.rs:1873:25
     |
1873 |     impl<T: StT + Ord + TotalOrder> Display for BinaryHeapPQ<T> {
     |                         ^^^^^^^^^^ not found in this scope
     |
help: consider importing this trait
     |
  28 +     use crate::vstdplus::total_order::total_order::TotalOrder;
     |

error[E0433]: failed to resolve: use of undeclared type `BinaryHeapPQ`
   --> src/Chap45/HeapsortExample.rs:246:22
    |
246 |         let mut pq = BinaryHeapPQ::empty();
    |                      ^^^^^^^^^^^^ use of undeclared type `BinaryHeapPQ`

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0405, E0425, E0433.
For more information about an error, try `rustc --explain E0405`.
Elapsed: 5s
Sampled Memory Usage: peak rust_verify RSS: 2537MB, peak z3 RSS: 0MB, min free: 18299MB
Sampled CPU Usage: rust_verify: 66s, z3 children: 68s
